--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,10 @@ fastapi
 uvicorn
 sqlalchemy
 pydantic
-python-dotenv 
+pydantic-settings
+python-dotenv
+psycopg2-binary
+requests
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart 
