Yeni özellikler eklendi: TMDB API ile film ve dizi öneri sistemine yönelik yeni servisler oluşturuldu. Kullanıcı etkileşimleri için yeni modeller ve ilişkiler tanımlandı. Ayrıca, film ve dizi ile ilgili API uç noktaları güncellendi ve hata yönetimi iyileştirildi. Gerekli bağımlılıklar requirements.txt dosyasına eklendi.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,9 @@ psycopg2-binary
 requests
 python-jose[cryptography]
 passlib[bcrypt]
-python-multipart 
+python-multipart
+sentence-transformers
+scikit-learn
+numpy
+faiss-cpu
+redis 
