--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ psycopg2-binary
 requests
 python-jose[cryptography]
 passlib[bcrypt]
+bcrypt>=4.1.2
 python-multipart
 sentence-transformers
 scikit-learn
