--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ requests
 python-jose[cryptography]
 passlib[bcrypt]
 bcrypt>=4.1.2
+argon2-cffi>=23.1.0
 python-multipart
 sentence-transformers
 scikit-learn
